Owin2AspNetCore: code clean up part II

--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Launcher/App.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Launcher/App.config
@@ -12,6 +12,7 @@
 
     <add key="containerType" value="worker" />
     <add key="frameworkRuntimeType" value=".NETFramework,Version=v4.6" />
+    <add key="runtime" value="win7-x64" />
 
     <add key="apiClientId" value="ClusterKit.NodeManager.Launcher" />
     <add key="apiClientSecret" value="{49F20BD7-DA51-4A7B-B13F-44881D71D395}" />
