--- a/Docker/ClusterKitManager/ClusterKit.NodeManager.Launcher.exe.config
+++ b/Docker/ClusterKitManager/ClusterKit.NodeManager.Launcher.exe.config
@@ -15,6 +15,7 @@
     <add key="stopAction" value="echo stopped"/>
     <add key="containerType" value="manager"/>
     <add key="frameworkRuntimeType" value=".NETFramework,Version=v4.6" />
+    <add key="runtime" value="debian-x64" />
     <add key="fallbackConfiguration" value="fallBackConfiguration.json"/>
   </appSettings>
 </configuration>
