--- a/Docker/ClusterKitWorker/ClusterKit.NodeManager.Launcher.exe.config
+++ b/Docker/ClusterKitWorker/ClusterKit.NodeManager.Launcher.exe.config
@@ -15,5 +15,6 @@
     <add key="stopAction" value="echo stopped"/>
     <add key="containerType" value="worker"/>
     <add key="frameworkRuntimeType" value=".NETFramework,Version=v4.6" />
+    <add key="runtime" value="debian-x64" />
   </appSettings>
 </configuration>
