--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
@@ -32,10 +32,6 @@
   <package id="Hyperion" version="0.9.2" targetFramework="net46" />
   <package id="JetBrains.Annotations" version="10.4.0" targetFramework="net46" />
   <package id="Libuv" version="1.9.1" targetFramework="net46" />
-  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNetCore.Antiforgery" version="1.1.1" targetFramework="net46" />
   <package id="Microsoft.AspNetCore.Authorization" version="1.1.1" targetFramework="net46" />
   <package id="Microsoft.AspNetCore.Cors" version="1.1.2" targetFramework="net46" />
@@ -70,7 +66,7 @@
   <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="1.1.1" targetFramework="net46" />
   <package id="Microsoft.AspNetCore.Routing" version="1.1.1" targetFramework="net46" />
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="1.1.1" targetFramework="net46" />
-  <package id="Microsoft.AspNetCore.Server.Kestrel" version="1.1.2" targetFramework="net46" />
+  <package id="Microsoft.AspNetCore.Server.Kestrel" version="1.0.3" targetFramework="net46" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="1.1.2" targetFramework="net46" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net46" />
@@ -108,7 +104,20 @@
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
   <package id="NMemory" version="1.1.2" targetFramework="net46" />
+  <package id="NuGet.Client" version="3.5.0" targetFramework="net46" />
+  <package id="NuGet.Common" version="4.0.0" targetFramework="net46" />
+  <package id="NuGet.Configuration" version="4.0.0" targetFramework="net46" />
+  <package id="NuGet.ContentModel" version="3.5.0" targetFramework="net46" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net46" />
+  <package id="NuGet.Frameworks" version="4.0.0" targetFramework="net46" />
+  <package id="NuGet.Packaging" version="4.0.0" targetFramework="net46" />
+  <package id="NuGet.Packaging.Core" version="4.0.0" targetFramework="net46" />
+  <package id="NuGet.Packaging.Core.Types" version="4.0.0" targetFramework="net46" />
+  <package id="NuGet.Protocol.Core.Types" version="4.0.0" targetFramework="net46" />
+  <package id="NuGet.Protocol.Core.v3" version="4.0.0" targetFramework="net46" />
+  <package id="NuGet.Repositories" version="3.5.0" targetFramework="net46" />
+  <package id="NuGet.RuntimeModel" version="3.5.0" targetFramework="net46" />
+  <package id="NuGet.Versioning" version="4.0.0" targetFramework="net46" />
   <package id="Serilog" version="2.4.0" targetFramework="net46" />
   <package id="Serilog.Extensions.Logging" version="1.4.0" targetFramework="net46" />
   <package id="Serilog.Sinks.ColoredConsole" version="2.0.0" targetFramework="net46" />
