--- a/Docker/ClusterKitManager/fallBackConfiguration.json
+++ b/Docker/ClusterKitManager/fallBackConfiguration.json
@@ -1,5 +1,5 @@
 {
-  "Configuration": "{\n       ClusterKit {\n        NodeManager.ConfigurationDatabaseConnectionString = \"User ID=postgres;Host=configDb;Port=5432;Pooling=true\"\nNodeManager.DefaultNugetFeeds {\n              publicFeed {\n                      address = \"/opt/packageCache\"\n                      type = public\n              } \n              privateFeed {\n                      address = \"http://nuget/\"\n                      type = private\n              }          \n          }  \n        Web {\n          Swagger.Publish {\n              publishDocPath = \"clusterkit/manager/swagger/doc\"\n              publishUiPath = \"clusterkit/manager/swagger/ui\"\n          }\n          Services {\n            ClusterKit/Web/Swagger { // ServiceName is just unique service identification, used in order to handle stacked config properly. It is used just localy on node\n              Port = 8080 // default owin port, current node listening port for server access\n              PublicHostName = default //public host name of this service. It doesn't supposed (but is not prohibited) that this should be real public service hostname. It's just used to distinguish services with identical url paths to be correctly published on frontend web servers. Real expected hostname should be configured in NginxConfigurator or similar publisher\n              Route = /clusterkit/manager/swagger //route (aka directory) path to service\n            }\n          }\n        }\n      }\n    }",
+  "Configuration": "{\n   ClusterKit {\n    NodeManager.ConfigurationDatabaseConnectionString = \"User ID=postgres;Host=configDb;Port=5432;Pooling=true\"\n\tNodeManager.DefaultNugetFeeds {\n      publicFeed {\n              address = \"/opt/packageCache\"\n              type = public\n      } \n      privateFeed {\n              address = \"http://nuget/\"\n              type = private\n      }          \n    }  \n  }\n}",
   "NodeTemplate": "clusterManager",
   "ReleaseId": 1,
   "Packages": [
@@ -49,14 +49,6 @@
     },
     {
       "Id": "ClusterKit.Web.GraphQL.Publisher",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Web.Swagger",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Web.Swagger.Monitor",
       "Version": "0.0.0-local"
     },
     {
@@ -192,10 +184,6 @@
       "Version": "0.0.0-local"
     },
     {
-      "Id": "ClusterKit.Web.Swagger.Messages",
-      "Version": "0.0.0-local"
-    },
-    {
       "Id": "CommonServiceLocator",
       "Version": "1.3.0"
     },
@@ -264,6 +252,10 @@
       "Version": "10.4.0"
     },
     {
+      "Id": "Libuv",
+      "Version": "1.9.1"
+    },
+    {
       "Id": "Microsoft.AspNet.Cors",
       "Version": "5.2.3"
     },
@@ -276,80 +268,280 @@
       "Version": "3.2.3"
     },
     {
-      "Id": "Microsoft.AspNet.SignalR.Core",
-      "Version": "2.2.1"
-    },
-    {
-      "Id": "Microsoft.AspNet.SignalR.Utils",
-      "Version": "2.2.1"
-    },
-    {
-      "Id": "Microsoft.AspNet.WebApi.Client",
-      "Version": "5.2.3"
-    },
-    {
-      "Id": "Microsoft.AspNet.WebApi.Core",
-      "Version": "5.2.3"
-    },
-    {
-      "Id": "Microsoft.AspNet.WebApi.Cors",
-      "Version": "5.2.3"
-    },
-    {
-      "Id": "Microsoft.AspNet.WebApi.Owin",
-      "Version": "5.2.3"
-    },
-    {
-      "Id": "Microsoft.AspNet.WebApi.OwinSelfHost",
-      "Version": "5.2.3"
-    },
-    {
       "Id": "Microsoft.AspNet.WebPages",
       "Version": "3.2.3"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Antiforgery",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Authentication",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Authentication.OAuth",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Authorization",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Cors",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Cryptography.Internal",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.DataProtection",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.DataProtection.Abstractions",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Diagnostics.Abstractions",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Hosting",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Hosting.Abstractions",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Hosting.Server.Abstractions",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Html.Abstractions",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Http",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Http.Abstractions",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Http.Extensions",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Http.Features",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.JsonPatch",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Localization",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Mvc",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Mvc.Abstractions",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Mvc.ApiExplorer",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Mvc.Core",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Mvc.Cors",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Mvc.DataAnnotations",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Mvc.Formatters.Json",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Mvc.Localization",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Mvc.Razor",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Mvc.Razor.Host",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Mvc.TagHelpers",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Mvc.ViewFeatures",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Razor",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Razor.Runtime",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.ResponseCaching.Abstractions",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Routing",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Routing.Abstractions",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.Server.Kestrel",
+      "Version": "1.0.3"
+    },
+    {
+      "Id": "Microsoft.AspNetCore.WebUtilities",
+      "Version": "1.1.2"
     },
     {
       "Id": "Microsoft.Bcl.Immutable",
       "Version": "1.0.34"
     },
     {
-      "Id": "Microsoft.Extensions.DependencyInjection.Abstractions",
+      "Id": "Microsoft.CodeAnalysis.Analyzers",
       "Version": "1.1.0"
     },
     {
-      "Id": "Microsoft.Extensions.Logging",
+      "Id": "Microsoft.CodeAnalysis.Common",
+      "Version": "1.3.0"
+    },
+    {
+      "Id": "Microsoft.CodeAnalysis.CSharp",
+      "Version": "1.3.0"
+    },
+    {
+      "Id": "Microsoft.CSharp",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "Microsoft.DotNet.PlatformAbstractions",
       "Version": "1.1.1"
     },
     {
-      "Id": "Microsoft.Extensions.Logging.Abstractions",
+      "Id": "Microsoft.Extensions.Caching.Abstractions",
       "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.Caching.Memory",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.Configuration",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.Extensions.Configuration.Abstractions",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.Extensions.Configuration.EnvironmentVariables",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.Extensions.DependencyInjection",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.DependencyInjection.Abstractions",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.DependencyModel",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.FileProviders.Abstractions",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.FileProviders.Composite",
+      "Version": "1.1.0"
+    },
+    {
+      "Id": "Microsoft.Extensions.FileProviders.Physical",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.FileSystemGlobbing",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.Globalization.CultureInfoCache",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.Localization",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.Localization.Abstractions",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.Logging",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.Extensions.Logging.Abstractions",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.Extensions.ObjectPool",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.Options",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.Extensions.PlatformAbstractions",
+      "Version": "1.1.0"
+    },
+    {
+      "Id": "Microsoft.Extensions.Primitives",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.WebEncoders",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.Net.Http.Headers",
+      "Version": "1.1.2"
     },
     {
       "Id": "Microsoft.NETCore.Platforms",
       "Version": "1.1.0"
-    },
-    {
-      "Id": "Microsoft.Owin",
-      "Version": "3.1.0"
-    },
-    {
-      "Id": "Microsoft.Owin.Cors",
-      "Version": "3.1.0"
-    },
-    {
-      "Id": "Microsoft.Owin.Host.HttpListener",
-      "Version": "3.1.0"
-    },
-    {
-      "Id": "Microsoft.Owin.Hosting",
-      "Version": "3.1.0"
-    },
-    {
-      "Id": "Microsoft.Owin.Security",
-      "Version": "3.1.0"
-    },
-    {
-      "Id": "Microsoft.Owin.Security.OAuth",
-      "Version": "3.1.0"
     },
     {
       "Id": "Microsoft.Web.Infrastructure",
@@ -380,16 +572,16 @@
       "Version": "2.14.0"
     },
     {
-      "Id": "Owin",
-      "Version": "1.0.0"
-    },
-    {
       "Id": "RestSharp",
       "Version": "105.2.3"
     },
     {
       "Id": "Serilog",
       "Version": "2.4.0"
+    },
+    {
+      "Id": "Serilog.Extensions.Logging",
+      "Version": "1.4.0"
     },
     {
       "Id": "Serilog.Sinks.ColoredConsole",
@@ -420,11 +612,11 @@
       "Version": "1.0.0"
     },
     {
-      "Id": "Swashbuckle.Core.Net45",
-      "Version": "5.2.1"
+      "Id": "System.AppContext",
+      "Version": "4.3.0"
     },
     {
-      "Id": "System.AppContext",
+      "Id": "System.Buffers",
       "Version": "4.3.0"
     },
     {
@@ -448,12 +640,24 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Diagnostics.Contracts",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Diagnostics.Debug",
       "Version": "4.3.0"
     },
     {
       "Id": "System.Diagnostics.DiagnosticSource",
-      "Version": "4.3.0"
+      "Version": "4.3.1"
+    },
+    {
+      "Id": "System.Diagnostics.FileVersionInfo",
+      "Version": "4.0.0"
+    },
+    {
+      "Id": "System.Diagnostics.StackTrace",
+      "Version": "4.0.1"
     },
     {
       "Id": "System.Diagnostics.Tools",
@@ -462,6 +666,10 @@
     {
       "Id": "System.Diagnostics.Tracing",
       "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Dynamic.Runtime",
+      "Version": "4.0.11"
     },
     {
       "Id": "System.Globalization",
@@ -512,6 +720,10 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Numerics.Vectors",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.ObjectModel",
       "Version": "4.3.0"
     },
@@ -524,6 +736,10 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Reflection.Metadata",
+      "Version": "1.4.1"
+    },
+    {
       "Id": "System.Reflection.Primitives",
       "Version": "4.3.0"
     },
@@ -533,6 +749,10 @@
     },
     {
       "Id": "System.Runtime",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.CompilerServices.Unsafe",
       "Version": "4.3.0"
     },
     {
@@ -576,8 +796,16 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Text.Encoding.CodePages",
+      "Version": "4.0.1"
+    },
+    {
       "Id": "System.Text.Encoding.Extensions",
       "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Text.Encodings.Web",
+      "Version": "4.3.1"
     },
     {
       "Id": "System.Text.RegularExpressions",
@@ -596,6 +824,14 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Threading.Tasks.Parallel",
+      "Version": "4.0.1"
+    },
+    {
+      "Id": "System.Threading.Thread",
+      "Version": "4.0.0"
+    },
+    {
       "Id": "System.Threading.Timer",
       "Version": "4.3.0"
     },
@@ -606,6 +842,18 @@
     {
       "Id": "System.Xml.XDocument",
       "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Xml.XmlDocument",
+      "Version": "4.0.1"
+    },
+    {
+      "Id": "System.Xml.XPath",
+      "Version": "4.0.1"
+    },
+    {
+      "Id": "System.Xml.XPath.XDocument",
+      "Version": "4.0.1"
     }
   ],
   "PackageSources": [
