--- a/Docker/ClusterKitPublisher/ClusterKit.NodeManager.Launcher.exe.config
+++ b/Docker/ClusterKitPublisher/ClusterKit.NodeManager.Launcher.exe.config
@@ -14,6 +14,7 @@
     <add key="stopAction" value="echo stopped"/>
     <add key="containerType" value="publisher"/>
     <add key="frameworkRuntimeType" value=".NETFramework,Version=v4.6" />
+    <add key="runtime" value="debian-x64" />
     <add key="fallbackConfiguration" value="fallBackConfiguration.json"/>
   </appSettings>
 </configuration>
