--- a/ClusterKit.Web/ClusterKit.Web.Authorization/ClusterKit.Web.Authorization.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Authorization/ClusterKit.Web.Authorization.csproj
@@ -35,6 +35,18 @@
       <Project>{42524C94-892D-4258-BD2C-D6F24D7BFABB}</Project>
       <Name>ClusterKit.Security.Attributes</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Web.Client\ClusterKit.Web.Client.csproj">
+      <Project>{8e543ea4-65de-475f-8045-c094cde58e29}</Project>
+      <Name>ClusterKit.Web.Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Web.Descriptor\ClusterKit.Web.Descriptor.csproj">
+      <Project>{39ca45b9-b12c-48c6-b2f6-1355f151bdcc}</Project>
+      <Name>ClusterKit.Web.Descriptor</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Web\ClusterKit.Web.csproj">
+      <Project>{477b201a-a30c-4360-b56a-6f61c049bb04}</Project>
+      <Name>ClusterKit.Web</Name>
+    </ProjectReference>
     <Reference Include="Akka, Version=1.1.3.344, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Akka.1.1.3.344-beta\lib\net45\Akka.dll</HintPath>
@@ -90,18 +102,6 @@
     </Reference>
     <Reference Include="Castle.Windsor">
       <HintPath>..\..\packages\Castle.Windsor.3.4.0\lib\net45\Castle.Windsor.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="ClusterKit.Web">
-      <HintPath>..\..\packages\ClusterKit.Web.0.0.0-local\lib\net45\ClusterKit.Web.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="ClusterKit.Web.Client">
-      <HintPath>..\..\packages\ClusterKit.Web.Client.0.0.0-local\lib\net45\ClusterKit.Web.Client.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="ClusterKit.Web.Descriptor">
-      <HintPath>..\..\packages\ClusterKit.Web.Descriptor.0.0.0-local\lib\net45\ClusterKit.Web.Descriptor.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="CommonServiceLocator.WindsorAdapter">
@@ -222,11 +222,11 @@
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-</ProjectReference>
+    </ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj">
       <Project>{25E3B4DC-717E-4ECA-A756-3112E2093CFF}</Project>
       <Name>ClusterKit.Security.Client</Name>
-</ProjectReference>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\RequireClientPrivilegeAttribute.cs" />
