--- a/nuget.config
+++ b/nuget.config
@@ -9,4 +9,7 @@
     <add key="Akka" value="https://www.myget.org/F/akkadotnet/api/v2" />
     <add key="Mods" value="./packagesMod" />
   </packageSources>
+  <disabledPackageSources>
+    <add key="Mods" value="true" />
+  </disabledPackageSources>
 </configuration>
