--- a/ClusterKit.Web/ClusterKit.Web.Authorization/ClusterKit.Web.Authorization.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Authorization/ClusterKit.Web.Authorization.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net461</TargetFrameworks>
+    <TargetFrameworks>net46</TargetFrameworks>
     <PackageId>ClusterKit.Web.Authorization</PackageId>
     <Version>0.0.0.0-local</Version>
     <Authors>ClusterKit</Authors>
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.Owin.Security.OAuth" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\ClusterKit.Security\ClusterKit.Security.Attributes\ClusterKit.Security.Attributes.csproj" />
+    <ProjectReference Include="..\..\ClusterKit.Security\ClusterKit.Security.Client\ClusterKit.Security.Client.csproj" />
     <ProjectReference Include="..\ClusterKit.Web\ClusterKit.Web.csproj" />
   </ItemGroup>
 </Project>
