--- a/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
+++ b/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Akka.Remote" Version="1.2.0" />
     <PackageReference Include="Akka.Serialization.Hyperion" Version="1.2.0.36-beta" />
     <PackageReference Include="Castle.Windsor" Version="3.4.0" />
+    <PackageReference Include="CommonServiceLocator" Version="1.3.0" />
     <PackageReference Include="CommonServiceLocator.WindsorAdapter" Version="1.0.0" />
     <PackageReference Include="JetBrains.Annotations" Version="10.4.0" />
     <PackageReference Include="Serilog" Version="2.4.0" />
