VS2017: nuget tools repack

--- a/ClusterKit.Core/ClusterKit.Core.Service/ClusterKit.Core.Service.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.Service/ClusterKit.Core.Service.csproj
@@ -11,7 +11,7 @@
     <ApplicationIcon />
     <OutputTypeEx>exe</OutputTypeEx>
     <OutputType>exe</OutputType>
-    <BuildOutputTargetFolder>tools</BuildOutputTargetFolder>
+    <IsTool>true</IsTool>
     <StartupObject />
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
