--- a/Docker/ClusterKitManager/fallBackConfiguration.json
+++ b/Docker/ClusterKitManager/fallBackConfiguration.json
@@ -4,35 +4,15 @@
   "ReleaseId": 1,
   "Packages": [
     {
+      "Id": "ClusterKit.API.Endpoint",
+      "Version": "0.0.0-local"
+    },
+    {
       "Id": "ClusterKit.Core.Service",
       "Version": "0.0.0-local"
     },
     {
-      "Id": "ClusterKit.NodeManager.Client",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Monitoring.Client",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Monitoring",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.NodeManager",
-      "Version": "0.0.0-local"
-    },
-    {
       "Id": "ClusterKit.Data.EF.Npgsql",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Web.Swagger.Monitor",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Web.Swagger",
       "Version": "0.0.0-local"
     },
     {
@@ -44,7 +24,19 @@
       "Version": "0.0.0-local"
     },
     {
-      "Id": "ClusterKit.Web.Authentication",
+      "Id": "ClusterKit.Monitoring",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Monitoring.Client",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.NodeManager",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.NodeManager.Client",
       "Version": "0.0.0-local"
     },
     {
@@ -52,15 +44,125 @@
       "Version": "0.0.0-local"
     },
     {
-      "Id": "ClusterKit.API.Endpoint",
+      "Id": "ClusterKit.Web.Authentication",
       "Version": "0.0.0-local"
     },
     {
       "Id": "ClusterKit.Web.GraphQL.Publisher",
       "Version": "0.0.0-local"
     },
-
-
+    {
+      "Id": "ClusterKit.Web.Swagger",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Web.Swagger.Monitor",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "BCrypt-Official",
+      "Version": "0.1.109"
+    },
+    {
+      "Id": "ClusterKit.API.Attributes",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.API.Client",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.API.Provider",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Core",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Data.CRUD",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Data.EF",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.LargeObjects",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.NodeManager.ConfigurationSource",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.NodeManager.Launcher.Messages",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.NodeManager.Migrator",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Security.Attributes",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Web",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Web.Authorization",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Web.Swagger.Messages",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "docopt.net",
+      "Version": "0.6.1.9"
+    },
+    {
+      "Id": "EntityFramework",
+      "Version": "6.1.3"
+    },
+    {
+      "Id": "EntityFramework6.Npgsql",
+      "Version": "3.1.1"
+    },
+    {
+      "Id": "GraphQL",
+      "Version": "0.15.1.678"
+    },
+    {
+      "Id": "Microsoft.Owin.Cors",
+      "Version": "3.1.0"
+    },
+    {
+      "Id": "Microsoft.Owin.Security.OAuth",
+      "Version": "3.1.0"
+    },
+    {
+      "Id": "NuGet.Core",
+      "Version": "2.14.0"
+    },
+    {
+      "Id": "Serilog.Sinks.ColoredConsole",
+      "Version": "2.0.0"
+    },
+    {
+      "Id": "Serilog.Sinks.Elasticsearch",
+      "Version": "5.1.0"
+    },
+    {
+      "Id": "StackExchange.Redis",
+      "Version": "1.2.3"
+    },
+    {
+      "Id": "Swashbuckle.Core.Net45",
+      "Version": "5.2.1"
+    }
   ],
   "PackageSources": [
     "/opt/packageCache",
