--- a/Docker/ClusterKitPublisher/fallBackConfiguration.json
+++ b/Docker/ClusterKitPublisher/fallBackConfiguration.json
@@ -8,29 +8,80 @@
       "Version": "0.0.0-local"
     },
     {
-
-      "Id": "ClusterKit.Web.NginxConfigurator",
-      "Version": "0.0.0-local"
-    },
-    {
-
-      "Id": "ClusterKit.NodeManager.Client",
-      "Version": "0.0.0-local"
-    },
-    {
-
       "Id": "ClusterKit.Log.Console",
       "Version": "0.0.0-local"
     },
     {
-
       "Id": "ClusterKit.Log.ElasticSearch",
       "Version": "0.0.0-local"
     },
     {
-
       "Id": "ClusterKit.Monitoring.Client",
       "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.NodeManager.Client",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Web.NginxConfigurator",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "BCrypt-Official",
+      "Version": "0.1.109"
+    },
+    {
+      "Id": "ClusterKit.API.Attributes",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.API.Client",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Core",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Data.CRUD",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.LargeObjects",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.NodeManager.Launcher.Messages",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.NodeManager.Migrator",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Security.Attributes",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Web.Client",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "docopt.net",
+      "Version": "0.6.1.9"
+    },
+    {
+      "Id": "EntityFramework",
+      "Version": "6.1.3"
+    },
+    {
+      "Id": "Serilog.Sinks.ColoredConsole",
+      "Version": "2.0.0"
+    },
+    {
+      "Id": "Serilog.Sinks.Elasticsearch",
+      "Version": "5.1.0"
     }
   ],
   "PackageSources": [
