VS2017: FallbackPackageDependencyFixer was rewritten on new Nuget

--- a/ClusterKit.Core/ClusterKit.Build/ClusterKit.Build.csproj
+++ b/ClusterKit.Core/ClusterKit.Build/ClusterKit.Build.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="FSharp.Core" Version="4.1.17" />
     <PackageReference Include="JetBrains.Annotations" Version="10.4.0" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="build.base.fsx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
