--- a/Docker/ClusterKitManager/fallBackConfiguration.json
+++ b/Docker/ClusterKitManager/fallBackConfiguration.json
@@ -4,7 +4,75 @@
   "ReleaseId": 1,
   "Packages": [
     {
+      "Id": "Akka",
+      "Version": "1.2.0"
+    },
+    {
+      "Id": "Akka.Cluster",
+      "Version": "1.2.0"
+    },
+    {
+      "Id": "Akka.Cluster.Sharding",
+      "Version": "1.2.0.36-beta"
+    },
+    {
+      "Id": "Akka.Cluster.Tools",
+      "Version": "1.2.0"
+    },
+    {
+      "Id": "Akka.DI.CastleWindsor",
+      "Version": "1.0.8"
+    },
+    {
+      "Id": "Akka.DI.Core",
+      "Version": "1.2.0"
+    },
+    {
+      "Id": "Akka.Logger.Serilog",
+      "Version": "1.2.0"
+    },
+    {
+      "Id": "Akka.Persistence",
+      "Version": "1.2.0.36-beta"
+    },
+    {
+      "Id": "Akka.Remote",
+      "Version": "1.2.0"
+    },
+    {
+      "Id": "Akka.Serialization.Hyperion",
+      "Version": "1.2.0.36-beta"
+    },
+    {
+      "Id": "BCrypt-Official",
+      "Version": "0.1.109"
+    },
+    {
+      "Id": "Castle.Core",
+      "Version": "3.3.0"
+    },
+    {
+      "Id": "Castle.Windsor",
+      "Version": "3.4.0"
+    },
+    {
+      "Id": "ClusterKit.API.Attributes",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.API.Client",
+      "Version": "0.0.0-local"
+    },
+    {
       "Id": "ClusterKit.API.Endpoint",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.API.Provider",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Core",
       "Version": "0.0.0-local"
     },
     {
@@ -12,7 +80,27 @@
       "Version": "0.0.0-local"
     },
     {
+      "Id": "ClusterKit.Data",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Data.CRUD",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Data.EF",
+      "Version": "0.0.0-local"
+    },
+    {
       "Id": "ClusterKit.Data.EF.Npgsql",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.LargeObjects",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.LargeObjects.Client",
       "Version": "0.0.0-local"
     },
     {
@@ -40,58 +128,6 @@
       "Version": "0.0.0-local"
     },
     {
-      "Id": "ClusterKit.Security.SessionRedis",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Web.Authentication",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Web.GraphQL.Publisher",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Web.Swagger",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Web.Swagger.Monitor",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "BCrypt-Official",
-      "Version": "0.1.109"
-    },
-    {
-      "Id": "ClusterKit.API.Attributes",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.API.Client",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.API.Provider",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Core",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Data.CRUD",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.Data.EF",
-      "Version": "0.0.0-local"
-    },
-    {
-      "Id": "ClusterKit.LargeObjects",
-      "Version": "0.0.0-local"
-    },
-    {
       "Id": "ClusterKit.NodeManager.ConfigurationSource",
       "Version": "0.0.0-local"
     },
@@ -108,7 +144,19 @@
       "Version": "0.0.0-local"
     },
     {
+      "Id": "ClusterKit.Security.Client",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Security.SessionRedis",
+      "Version": "0.0.0-local"
+    },
+    {
       "Id": "ClusterKit.Web",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Web.Authentication",
       "Version": "0.0.0-local"
     },
     {
@@ -116,12 +164,56 @@
       "Version": "0.0.0-local"
     },
     {
+      "Id": "ClusterKit.Web.GraphQL.Publisher",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "ClusterKit.Web.Swagger",
+      "Version": "0.0.0-local"
+    },
+    {
       "Id": "ClusterKit.Web.Swagger.Messages",
       "Version": "0.0.0-local"
     },
     {
+      "Id": "ClusterKit.Web.Swagger.Monitor",
+      "Version": "0.0.0-local"
+    },
+    {
+      "Id": "CommonServiceLocator",
+      "Version": "1.3"
+    },
+    {
+      "Id": "CommonServiceLocator.WindsorAdapter",
+      "Version": "1.0"
+    },
+    {
       "Id": "docopt.net",
       "Version": "0.6.1.9"
+    },
+    {
+      "Id": "DotNetty.Buffers",
+      "Version": "0.4.3"
+    },
+    {
+      "Id": "DotNetty.Codecs",
+      "Version": "0.4.3"
+    },
+    {
+      "Id": "DotNetty.Common",
+      "Version": "0.4.3"
+    },
+    {
+      "Id": "DotNetty.Handlers",
+      "Version": "0.4.3"
+    },
+    {
+      "Id": "DotNetty.Transport",
+      "Version": "0.4.3"
+    },
+    {
+      "Id": "Elasticsearch.Net",
+      "Version": "2.4.2"
     },
     {
       "Id": "EntityFramework",
@@ -132,11 +224,83 @@
       "Version": "3.1.1"
     },
     {
+      "Id": "Google.ProtocolBuffers",
+      "Version": "2.4.1.555"
+    },
+    {
       "Id": "GraphQL",
       "Version": "0.15.1.678"
     },
     {
+      "Id": "GraphQL-Parser",
+      "Version": "2.0.0"
+    },
+    {
+      "Id": "Hyperion",
+      "Version": "0.9.2"
+    },
+    {
+      "Id": "JetBrains.Annotations",
+      "Version": "10.4.0"
+    },
+    {
+      "Id": "Microsoft.AspNet.Cors",
+      "Version": "5.2.3"
+    },
+    {
+      "Id": "Microsoft.AspNet.WebApi.Client",
+      "Version": "5.2.3"
+    },
+    {
+      "Id": "Microsoft.AspNet.WebApi.Core",
+      "Version": "5.2.3"
+    },
+    {
+      "Id": "Microsoft.AspNet.WebApi.Cors",
+      "Version": "5.2.2"
+    },
+    {
+      "Id": "Microsoft.AspNet.WebApi.Owin",
+      "Version": "5.2.3"
+    },
+    {
+      "Id": "Microsoft.AspNet.WebApi.OwinSelfHost",
+      "Version": "5.2.3"
+    },
+    {
+      "Id": "Microsoft.Extensions.DependencyInjection.Abstractions",
+      "Version": "1.1.0"
+    },
+    {
+      "Id": "Microsoft.Extensions.Logging",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.Logging.Abstractions",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.NETCore.Platforms",
+      "Version": "1.1.0"
+    },
+    {
+      "Id": "Microsoft.Owin",
+      "Version": "3.1.0"
+    },
+    {
       "Id": "Microsoft.Owin.Cors",
+      "Version": "3.1.0"
+    },
+    {
+      "Id": "Microsoft.Owin.Host.HttpListener",
+      "Version": "2.0.2"
+    },
+    {
+      "Id": "Microsoft.Owin.Hosting",
+      "Version": "3.0.1"
+    },
+    {
+      "Id": "Microsoft.Owin.Security",
       "Version": "3.1.0"
     },
     {
@@ -144,8 +308,36 @@
       "Version": "3.1.0"
     },
     {
+      "Id": "Microsoft.Web.Xdt",
+      "Version": "2.1.0"
+    },
+    {
+      "Id": "Microsoft.Win32.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "NETStandard.Library",
+      "Version": "1.6.1"
+    },
+    {
+      "Id": "Newtonsoft.Json",
+      "Version": "10.0.2"
+    },
+    {
+      "Id": "Npgsql",
+      "Version": "3.1.0"
+    },
+    {
       "Id": "NuGet.Core",
       "Version": "2.14.0"
+    },
+    {
+      "Id": "Owin",
+      "Version": "1.0"
+    },
+    {
+      "Id": "Serilog",
+      "Version": "2.4.0"
     },
     {
       "Id": "Serilog.Sinks.ColoredConsole",
@@ -156,12 +348,204 @@
       "Version": "5.1.0"
     },
     {
+      "Id": "Serilog.Sinks.File",
+      "Version": "3.0.1"
+    },
+    {
+      "Id": "Serilog.Sinks.PeriodicBatching",
+      "Version": "2.0.0"
+    },
+    {
+      "Id": "Serilog.Sinks.RollingFile",
+      "Version": "3.0.1"
+    },
+    {
       "Id": "StackExchange.Redis",
       "Version": "1.2.3"
     },
     {
       "Id": "Swashbuckle.Core.Net45",
       "Version": "5.2.1"
+    },
+    {
+      "Id": "System.AppContext",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Collections",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Collections.Concurrent",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Collections.Immutable",
+      "Version": "1.3.1"
+    },
+    {
+      "Id": "System.ComponentModel",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Console",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Diagnostics.Debug",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Diagnostics.DiagnosticSource",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Diagnostics.Tools",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Diagnostics.Tracing",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Globalization",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Globalization.Calendars",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.IO",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.IO.Compression",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.IO.Compression.ZipFile",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.IO.FileSystem",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.IO.FileSystem.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Linq",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Linq.Expressions",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Net.Http",
+      "Version": "4.3.2"
+    },
+    {
+      "Id": "System.Net.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Net.Sockets",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.ObjectModel",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Reflection",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Reflection.Extensions",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Reflection.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Resources.ResourceManager",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.Extensions",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.Handles",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.InteropServices",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.InteropServices.RuntimeInformation",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.Numerics",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Cryptography.Algorithms",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Cryptography.Encoding",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Cryptography.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Cryptography.X509Certificates",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Text.Encoding",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Text.Encoding.Extensions",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Text.RegularExpressions",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Threading",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Threading.Tasks",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Threading.Timer",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Xml.ReaderWriter",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Xml.XDocument",
+      "Version": "4.3.0"
     }
   ],
   "PackageSources": [
